--- a/.infra/cdk/package.json
+++ b/.infra/cdk/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "hla-infra",
+  "name": "hla-cdk",
+  "version": "0.1.0",
   "private": true,
+  "bin": {
+    "hla-cdk": "bin/hla.js"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "synth": "cdk synth",
-    "diff": "cdk diff",
-    "deploy": "cdk deploy --require-approval never",
-    "destroy": "cdk destroy --force"
+    "watch": "tsc -w",
+    "cdk:synth": "cdk synth",
+    "cdk:deploy": "cdk deploy --require-approval never",
+    "cdk:destroy": "cdk destroy --force --all"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.154.0",
+    "aws-cdk-lib": "2.151.0",
     "constructs": "10.3.0",
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
-    "typescript": "^5.4.0",
+    "@types/node": "^20.11.24",
     "ts-node": "^10.9.2",
-    "@types/node": "^20.12.7"
+    "typescript": "^5.4.5"
   }
 }
