--- a/.infra/cdk/tsconfig.json
+++ b/.infra/cdk/tsconfig.json
@@ -1,15 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "target": "ES2021",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "lib": ["ES2021"],
     "strict": true,
-    "outDir": "dist",
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "outDir": "dist",
+    "rootDir": "."
   },
-  "include": [
-    "bin",
-    "lib"
-  ]
+  "include": ["bin/**/*.ts", "lib/**/*.ts"]
 }
