--- a/.infra/cdk/package.json
+++ b/.infra/cdk/package.json
@@ -3,23 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "bin": {
-    "hla-cdk": "bin/hla.js"
+    "hla-cdk": "bin/hla.ts"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "watch": "tsc -w",
     "cdk:synth": "cdk synth",
-    "cdk:deploy": "cdk deploy --require-approval never",
-    "cdk:destroy": "cdk destroy --force --all"
-  },
-  "dependencies": {
-    "aws-cdk-lib": "2.151.0",
-    "constructs": "10.3.0",
-    "source-map-support": "^0.5.21"
+    "cdk:diff": "cdk diff",
+    "cdk:bootstrap": "cdk bootstrap aws://$env:AWS_ACCOUNT_ID/$env:AWS_REGION --profile $env:AWS_PROFILE",
+    "cdk:deploy": "cdk deploy HLAStack --require-approval never --profile $env:AWS_PROFILE",
+    "cdk:destroy": "cdk destroy --all --force --profile $env:AWS_PROFILE"
   },
   "devDependencies": {
-    "@types/node": "^20.11.24",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "@types/node": "^24.9.2",
+    "aws-cdk": "2.152.0",
+    "constructs": "10.3.0",
+    "source-map-support": "^0.5.21",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "aws-cdk-lib": "2.152.0"
   }
 }
